force-app/main/default/objects/Reported_Bug__c/Reported_Bug__c.object-meta.xml
<CustomObject>
    <label>Reported Bug</label>
    <nameField>
        <displayFormat>Bug-{0000}</displayFormat>
        <label>Reported Bug Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reported Bugs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>