force-app/main/default/objects/Reported_Bug__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Where in the mobile app this bug was encountered.</description>
    <inlineHelpText>Where in the mobile app this bug was encountered.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Transactions</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Everyday Account</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>