force-app/main/default/objects/Reported_Bug__c/fields/Date_Bug_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Date_Bug_Resolved__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The date the bug is resolved for customers.</description>
    <inlineHelpText>The date the bug is resolved for customers.</inlineHelpText>
    <label>Date Bug Resolved</label>
    <type>Date</type>
</CustomField>