force-app/main/default/objects/Reported_Bug__c/fields/Date_Time_Bug_Occurred__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Bug_Occurred__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The date/time this bug was first encountered.</description>
    <inlineHelpText>The date/time this bug was first encountered.</inlineHelpText>
    <label>Date/Time Bug Occurred</label>
    <type>DateTime</type>
</CustomField>