force-app/main/default/objects/Reported_Bug__c/fields/Expected_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Expected_Outcome__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>What the customer expected to happen when they encountered the bug.</description>
    <inlineHelpText>What the customer expected to happen when they encountered the bug.</inlineHelpText>
    <label>Expected Outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>