force-app/main/default/objects/Reported_Bug__c/fields/Jira_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Jira_Ticket__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The jira ticket that is being used to track the progress of bug resolution.</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>The jira ticket that is being used to track the progress of bug resolution.</inlineHelpText>
    <label>Jira Ticket</label>
    <type>Url</type>
</CustomField>