force-app/main/default/objects/Reported_Bug__c/fields/Mobile_Device_Details__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Device_Details__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy - Personal Information;Source_Salesforce</complianceGroup>
    <description>The customer&apos;s mobile device details.</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>The customer&apos;s mobile device details.</inlineHelpText>
    <label>Mobile Device Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>