force-app/main/default/objects/Reported_Bug__c/fields/Number_of_Related_Cases__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Related_Cases__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The number of cases that have been raised by customers relating to this bug.</description>
    <inlineHelpText>The number of cases that have been raised by customers relating to this bug.</inlineHelpText>
    <label>Number of Related Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>