force-app/main/default/objects/Reported_Bug__c/fields/Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Reported_By__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Personal Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reported By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reported Bugs</relationshipLabel>
    <relationshipName>Reported_Bugs</relationshipName>
    <type>Lookup</type>
</CustomField>