force-app/main/default/objects/Reported_Bug__c/fields/Resolution_Status__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The resolution status for this bug.</description>
    <inlineHelpText>The resolution status for this bug.</inlineHelpText>
    <label>Resolution Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Prioritisation</fullName>
            </value>
            <value>
                <fullName>Prioritised</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Scheduled for Release</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>