force-app/main/default/objects/Reported_Bug__c/fields/Responsible_Value_Stream__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Value_Stream__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The value stream responsible for the investigation and resolution of this bug.</description>
    <inlineHelpText>The value stream responsible for the investigation and resolution of this bug.</inlineHelpText>
    <label>Responsible Value Stream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Join</fullName>
            </value>
            <value>
                <fullName>Manage My Money</fullName>
            </value>
            <value>
                <fullName>Get Help</fullName>
            </value>
            <value>
                <fullName>CPP</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Learn and Adopt</fullName>
            </value>
            <value>
                <fullName>M.A.C</fullName>
            </value>
            <value>
                <fullName>Data Enablement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>