force-app/main/default/objects/Reported_Bug__c/fields/SRE_Team__c.field-meta.xml
<CustomField>
    <fullName>SRE_Team__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The SRE team responsible for prioritisation and resolution of this bug.</description>
    <inlineHelpText>The SRE team responsible for prioritisation and resolution of this bug.</inlineHelpText>
    <label>SRE Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core SRE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>