force-app/main/default/objects/Reported_Bug__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <complianceGroup>Integrity - Trusted;Source - Salesforce;Privacy - Non Personal Information</complianceGroup>
    <description>The current status of this bug.</description>
    <inlineHelpText>The current status of this bug.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Escalated to SRE</fullName>
            </value>
            <value>
                <fullName>Action Required</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>