force-app/main/default/objects/Reported_Bug__c/fields/Steps_Taken_Prior_to_Hitting_Bug__c.field-meta.xml
<CustomField>
    <fullName>Steps_Taken_Prior_to_Hitting_Bug__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The steps the customer performed immediately before encountering the bug.</description>
    <inlineHelpText>The steps the customer performed immediately before encountering the bug.</inlineHelpText>
    <label>Steps Taken Prior to Hitting Bug</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>