force-app/main/default/objects/Reported_Bug__c/fields/What_Customer_was_Trying_to_Do__c.field-meta.xml
<CustomField>
    <fullName>What_Customer_was_Trying_to_Do__c</fullName>
    <complianceGroup>Integrity - Trusted;Source - Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>What the customer was attempting to do when they encountered the bug.</description>
    <inlineHelpText>Textual description of what a customer was doing at the time they encountered a bug with ANZx, eg with the mobile app or website.</inlineHelpText>
    <label>What Customer was Trying to Do</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Profile Change</fullName>
            </value>
            <value>
                <fullName>Goals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>